Jigsawに対応; JUnit5に移行; テンプレート更新; ビルドスクリプト修正